<resources>
    <string name="app_name">AppGaleria</string>
    <string name="btn_acessar">ENTRAR</string>
    <string name="btn_gmail">Sing In With Google</string>
    <string name="cb_lembrar">Lembrar</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_redefinir_senha">Redefinir\nSenha</string>
    <string name="txt_esqueceu_senha">Esqueceu a senha?</string>
    <string name="menu_molde">Moldes</string>
    <string name="menu_favorito">Favoritos</string>
    <string name="menu_home">Home</string>
    <string name="menu_aviamento">Aviamentos</string>
    <string name="menu_contato">Contatos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="txt_dropdown">Selecione o subgrupo</string>
    <string name="txt_cadastrar_contato">Cadastrar\nContato</string>
    <string name="txt_cadastrar_aviamento">Cadastrar\nAviamento</string>
    <string name="txt_cadastrar_molde">Cadastrar\nMolde</string>
    <string name="btn_filtrar">Filtrar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="camera">Câmera</string>
    <string name="galeria">Galeria</string>
    <string name="cancelar">Cancelar</string>

    <string-array name="categoria_top">
        <item>Blusa</item>
        <item>Cropped</item>
        <item>Casaco</item>
        <item>Camisa</item>
        <item>Camiseta</item>
    </string-array>
    <string-array name="categoria_bottom">
        <item>Calça</item>
        <item>Saia</item>
        <item>Short</item>
    </string-array>
    <string-array name="categoria_hibrido">
        <item>Vestido</item>
        <item>Macacão</item>
    </string-array>
    <string-array name="categoria_outros">
        <item>Festa</item>
        <item>Acessórios</item>
    </string-array>

    <string-array name="dropdown_tamanho">
        <item>PP</item>
        <item>P</item>
        <item>M</item>
        <item>G</item>
        <item>GG</item>
        <item>EG</item>
        <item>SM</item>
    </string-array>
    <string-array name="spinner_tipo">
        <item>Top</item>
        <item>Bottom</item>
        <item>Híbrido</item>
        <item>Outros</item>
    </string-array>
    <string-array name="spinner_genero">
        <item>Âgenero</item>
        <item>Feminino</item>
        <item>Masculino</item>
    </string-array>

    <string name="action_settings">Settings</string>
</resources>